<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reply SalesManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sales_order">Sales Order</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_sales_order_view">SalesOrderView</string>
    <string name="title_activity_sales_order_item_view">SalesOrderItemView</string>
    <string name="title_activity_sales_order_item_search_view">SalesOrderItemSearchView</string>
    <string name="SalesOrder">Sales Order</string>
    <string name="Settings">Settings</string>
    <string name="LoadData">LoadData</string>
    <string name="Voice">Voice</string>
    <string name="TryVoice">Try Voice Recognition and say: Sales Order</string>
    <string name="ScrollView">Scroll View</string>
    <string name="UseMockAlways">Use Mock Data always</string>
    <string name="UseMock">Use Mock Data</string>
    <string name="UseDevCon">Use Development Connection (URL)</string>
    <string name="Company">Company</string>
    <string name="Next">Next</string>
    <string name="Prev">Previous</string>
    <string name="PrevShort">Prev</string>
    <string name="Item">Item</string>
    <string name="General">General</string>
    <string name="Customer">Customer</string>
    <string name="Number">Number</string>
    <string name="ObjectID">Object ID</string>
    <string name="Description">Description</string>
    <string name="Quantity">Quantity</string>
    <string name="ProductID">Product ID</string>
    <string name="ChooseUrlInPicker">Choose Url</string>
    <string name="ChoosenUrl">Choosen Url</string>
    <string name="url_test">URL for testing</string>
    <string name="url_dep1">URL for development - Group 1</string>
    <string name="url_dep2">URL for development - Group 2</string>

</resources>
