<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="${relativePackage}.${activityClass}"    
    >

	<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    tools:context="${relativePackage}.${activityClass}" > -->
	
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:layout_gravity="fill_vertical" 
	    android:background="@android:color/black"
	    >
	
	    <VideoView
	        android:id="@+id/videoView1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="0dp"
	        android:layout_marginBottom="0dp"
	        android:layout_gravity="fill_vertical"
	        android:configChanges="orientation|screenSize" />
	    
	    <Button
	        android:id="@+id/B_SalesOrder"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="30dp"
	        android:drawableStart="@drawable/salesorder"
	        android:drawableLeft="@drawable/salesorder"
	        android:onClick="onClick_Listener"
	        android:text="@string/SalesOrder"
	        android:alpha="90">
	        <requestFocus /> </Button>
	
	    <Button
	        android:id="@+id/B_Settings"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="100dp"
	        android:alpha="90"	        
	        android:onClick="onClick_Listener"
	        android:text="@string/Settings" />
	
	    <Button
	        android:id="@+id/B_LoadData"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="150dp"
	        android:alpha="90"
	        android:onClick="onClick_Listener"
	        android:text="@string/LoadData" />
		
	    <!-- Test Voice Recognition -->
	    
	    <Button
	        android:id="@+id/B_Voice"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="200dp"
	        android:alpha="90"
	        android:onClick="onClick_Listener"
	        android:text="@string/Voice" />
	
	    <ListView
	        android:id="@+id/L_List"
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="240dp"	    
	        android:alpha="90"> 
	    </ListView>
	    <!--android:layout_weight="1" >-->
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="260dp"
	        android:alpha="90"
	        android:text="@string/TryVoice" />
	
	    <!--<Button
	        android:id="@+id/button1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="35dp"
	        android:layout_marginRight="35dp"
	        android:layout_marginTop="300dp"
	        android:alpha="90"
	        android:text="@string/ScrollView" 
	        android:onClick="onClick_Listener" />-->
		    
	</FrameLayout>
</ScrollView>